<resources>
    <string name="nearit_ui_app_name" translatable="false">ui_bindings</string>
    <string name="nearit_ui_permissions_explanation_text">Do you want to receive personalized contents? Allow us to know your location</string>
    <string name="nearit_ui_close_permissions_text">Close</string>
    <string name="nearit_ui_bluetooth">Bluetooth</string>
    <string name="nearit_ui_location">Location</string>
    <string name="nearit_ui_go_to_settings">Settings</string>
    <string name="nearit_ui_cancel_dialog">Cancel</string>
    <string name="nearit_ui_turn_on_location_title">Flight mode detected</string>
    <string name="nearit_ui_turn_on_location_message">Please, turn flight mode off</string>
    <string name="nearit_ui_permission_title">Missing location permission</string>
    <string name="nearit_ui_permission_message">Please, change your selection under \"Permissions\" section</string>

    <string name="nearit_ui_coupon_valid_text">Valid coupon</string>
    <string name="nearit_ui_coupon_expired_text">Expired coupon</string>
    <string name="nearit_ui_coupon_inactive_text">Inactive coupon</string>
    <string name="nearit_ui_coupon_list_inactive_text">Valid from </string>
    <string name="nearit_ui_coupon_redeemed_text">Already used coupon</string>
    <string name="nearit_ui_coupon_validity_label_valid">Validity: </string>
    <string name="nearit_ui_coupon_validity_label_valid_no_period">Valid</string>
    <string name="nearit_ui_coupon_validity_label_redeemed">Redeemed at: </string>
    <string name="nearit_ui_coupon_validity_period_from">from %1$s</string>
    <string name="nearit_ui_coupon_validity_period_until">until %2$s</string>
    <string name="nearit_ui_coupon_validity_period_from_to">from %1$s to %2$s</string>
    <string name="nearit_ui_coupon_date_pretty_format">MM-dd-yyyy</string>

    <string name="nearit_ui_feedback_leave_a_comment">Leave a comment (optional)</string>
    <string name="nearit_ui_feedback_error_message">Ops, something went wrong!</string>
    <string name="nearit_ui_feedback_close_button">No, thank you</string>
    <string name="nearit_ui_feedback_send_success_message">Thanks for your feedback!</string>
    <string name="nearit_ui_feedback_send_button_default_text">Send</string>

    <string name="nearit_ui_permission_bar_alert_text">Provide\nall the missing authorizations</string>
    <string name="nearit_ui_permission_bar_button_text">OK!</string>

    <string name="nearit_ui_coupon_list_empty_list_text">No coupons available</string>
    <string name="nearit_ui_warning_dialog_button_text">Retry</string>
    <string name="nearit_ui_warning_dialog_close_text">Close</string>
    <string name="nearit_ui_warning_dialog_message">Network problem</string>

    <string name="nearit_ui_inbox_empty_list_text">No messages available</string>
    <string name="nearit_ui_inbox_content_button_label">See more</string>
    <string name="nearit_ui_inbox_feedback_button_label">Open</string>
</resources>
