<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/nearit_ui_permissions_activity_background_color"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/nearit_ui_permissions_header"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:focusableInTouchMode="true"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="@dimen/nearit_ui_permissions_activity_padding"
                android:paddingRight="@dimen/nearit_ui_permissions_activity_padding">

                <TextView
                    android:id="@+id/permissions_explanation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/nearit_ui_permissions_activity_margin1"
                    android:gravity="center_horizontal"
                    android:text="@string/nearit_ui_permissions_explanation_text"
                    android:textAlignment="center"
                    android:textAppearance="@style/NearItUIPermissionsExplanationTextAppearance" />

                <com.nearit.ui_bindings.permissions.views.PermissionButton
                    android:id="@+id/location_button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="@dimen/nearit_ui_permissions_activity_margin2"
                    android:clickable="true"
                    app:buttonText="@string/nearit_ui_location"
                    app:iconRes="@drawable/ic_nearit_ui_location" />

                <com.nearit.ui_bindings.permissions.views.PermissionButton
                    android:id="@+id/ble_button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="@dimen/nearit_ui_permissions_activity_margin3"
                    android:clickable="true"
                    app:buttonText="@string/nearit_ui_bluetooth"
                    app:iconRes="@drawable/ic_nearit_ui_bluetooth" />

                <TextView
                    android:id="@+id/close_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/nearit_ui_permissions_activity_margin5"
                    android:layout_marginTop="@dimen/nearit_ui_permissions_activity_margin4"
                    android:text="@string/nearit_ui_close_permissions_text"
                    android:textAlignment="center"
                    android:textAppearance="@style/NearItUIPermissionsDismissButtonTextAppearance"
                    android:textColor="@drawable/nearit_ui_selector_permission_close_text_color"
                    android:textStyle="italic" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>