<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/nearit_ui_feedback_background_color"
    tools:context="com.nearit.ui_bindings.feedback.NearItFeedbackActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/nearit_ui_feedback_overall_padding">

        <ImageView
            android:id="@+id/feedback_success_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nearit_ui_feedback_margin1"
            android:visibility="gone"
            android:src="@drawable/ic_nearit_ui_feedback_positive_result"/>

        <TextView
            android:id="@+id/feedback_success_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nearit_ui_feedback_margin2"
            android:layout_marginBottom="@dimen/nearit_ui_feedback_margin3"
            android:gravity="center"
            android:visibility="gone"
            android:textAppearance="@style/NearItUIFeedbackSuccessMessageTextAppearance"
            android:text="@string/nearit_ui_feedback_send_success_message"/>

        <TextView
            android:id="@+id/feedback_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nearit_ui_feedback_margin4"
            android:gravity="center"
            android:textAppearance="@style/NearItUIFeedbackQuestionTextAppearance" />

        <LinearLayout
            android:id="@+id/feedback_rating_bar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingBottom="28dp"
            android:paddingTop="28dp"
            android:gravity="center_horizontal">

            <com.nearit.ui_bindings.feedback.views.NearItUIRatingBar
                android:id="@+id/feedback_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:srb_numberOfStars="5"
                app:srb_stepSize="1"
                app:srb_starSize="@dimen/nearit_ui_feedback_rating_bar_star_size"
                app:srb_maxStarSize="@dimen/nearit_ui_feedback_rating_bar_star_size"
                app:srb_starBorderWidth="@dimen/nearit_ui_feedback_rating_bar_star_border_size"
                app:srb_borderColor="@color/nearit_ui_rating_bar_star_border_color"
                app:srb_fillColor="@color/nearit_ui_rating_bar_fill_star_background_color"
                app:srb_starBackgroundColor="@color/nearit_ui_rating_bar_empty_star_background_color"
                app:srb_starsSeparation="@dimen/nearit_ui_feedback_rating_bar_stars_separation"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/feedback_comment_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/feedback_comment_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nearit_ui_feedback_leave_a_comment"
                android:textAppearance="@style/NearItUIFeedbackCommentLabelTextAppearance"
                android:layout_marginBottom="@dimen/nearit_ui_feedback_margin9" />

            <EditText
                android:id="@+id/feedback_comment_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/nearit_ui_feedback_margin8"

                android:background="@drawable/nearit_ui_edittext_background"
                android:padding="2dp"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="@integer/nearit_ui_feedback_comment_box_lines"
                android:minLines="@integer/nearit_ui_feedback_comment_box_min_lines"
                android:scrollbars="vertical" />

        </LinearLayout>

        <TextView
            android:id="@+id/feedback_error_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/nearit_ui_feedback_margin10"
            android:gravity="center"
            android:text="@string/nearit_ui_feedback_error_message"
            android:textAppearance="@style/NearItUIFeedbackErrorAlertTextAppearance"
            android:visibility="gone" />

        <com.nearit.ui_bindings.feedback.views.NearItUIFeedbackButton
            android:id="@+id/feedback_send_comment_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nearit_ui_feedback_send_button_height"
            android:visibility="gone"
            app:genericButtonText="@string/nearit_ui_feedback_send_button_default_text" />

        <TextView
            android:id="@+id/feedback_dismiss_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/nearit_ui_feedback_close_button_padding"
            android:layout_marginTop="@dimen/nearit_ui_feedback_margin11"
            android:gravity="center"
            android:textAppearance="@style/NearItUIFeedbackDismissButtonTextAppearance"
            android:text="@string/nearit_ui_feedback_close_button"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>